<resources>
    <string name="app_name">CMS App</string>
    <string name="nav_header_title">Not Signed In</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_create_announcement">Create Announcement</string>
    <string name="menu_view_complaints">View Complaints</string>
    <string name="menu_login">Login</string>
    <string name="menu_sign_up">Sign Up</string>
    <string name="menu_view_announcements">View Announcements</string>
    <string name="menu_schedule_events">Schedule Events</string>
    <string name="menu_announcements_and_events">Announcements and Events</string>
    <string name="no_account_button_text">Have no account?</string>
    <string name="login_button_text">Login</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="complaint_hint">Complaint message</string>
    <string name="submit_button_text">Submit</string>
    <string name="schedule_button">Schedule</string>
    <string name="feedback_prompt">We value your feedback on the events. Kindly complete the form below. For the numeric rating, please use a scale of 1 to 10, where 1 indicates the least favorable and 10 represents the most favorable experience.</string>
    <string name="check_post">Check your CMS POSt requirements</string>
    <string name="applying_to">Which program are you considering applying to?</string>
    <string name="specialization">Which type of specialization?</string>
    <string name="minor">Minor</string>
    <string name="major_or_special">Major or specialist</string>
    <string name="major">Major</string>
    <string name="special">Specialist</string>
    <string name="criteria">These are the criteria for your chosen program.</string>
    <string name="four_credit">4 credits</string>
    <string name="CSCA08">Passed CSCA08</string>
    <string name="CSCA48">Passed CSCA48</string>
    <string name="one_of">Passed 1 of CSC/MATA67, MATA22/A23, MATA30/A31/A32</string>
    <string name="B_CSCA48">A grade of at least B in CSCA48</string>
    <string name="C_in_2">A grade of at least C- in two of CSC/MATA67, MATA22, MATA37</string>
    <string name="POSt">POSt Requirements</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="description">Description: </string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>
    <string name="rsvp">RSVP</string>
    <string name="menu_view_feedback">View Feedback</string>
    <string name="menu_view_events">View Events</string>
    <string name="complaint_form">Complaint Form</string>
    <string name="feedback_form">Feedback Form</string>
    <string name="elipses">...</string>
    <string name="announcements">Announcements</string>
    <string name="announcements_posted_by_staff_members_at_utsc">Announcements posted by staff members at UTSC.</string>
    <string name="view">View</string>
    <string name="events">Events</string>
    <string name="events_taking_place_at_utsc">Events taking place at UTSC.</string>
    <string name="got_a_complaint">Got a complaint?</string>
    <string name="enter_a_message_below_to_create_a_complaint_to_staff_members_at_utsc">Enter a message below to create a complaint to staff members at UTSC.</string>
    <string name="anonymous">Anonymous</string>
    <string name="got_a_new_announcement">Got a new announcement?</string>
    <string name="enter_a_message_below_to_post_as_an_announcement_to_all_users">Enter a message below to post as an announcement to all users.</string>
    <string name="new_announcement">New announcement</string>
    <string name="post_announcement">Post announcement</string>
    <string name="got_some_feedback">Got some feedback?</string>
    <string name="event">Event</string>
    <string name="comments">Comments</string>
    <string name="numeric_rating">Numeric Rating</string>
    <string name="additional_comments">Additional comments</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_to_the_computer_and_mathematical_sciences_app_check_out_all_the_features_available_to_students_at_utsc">Welcome to the Computer and Mathematical Sciences App! Check out all the features available to students at UTSC.</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="log_in_to_your_account_by_typing_your_username_and_password_then_select_the_type_of_account">Log in to your account by typing your username and password, then select the type of account.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="student">Student</string>
    <string name="admin">Admin</string>
    <string name="sign_out">Sign out</string>
    <string name="rsvp_event">RSVP Event</string>
    <string name="complaint">Complaint</string>
    <string name="you_do_not_have_permission_to_access_this_page">You do not have permission to access this page.</string>
    <string name="load_events">Load Events</string>
    <string name="computer_science">Computer Science</string>
    <string name="view_requirements">View requirements</string>
    <string name="mathematics">Mathematics</string>
    <string name="statistics">Statistics</string>
    <string name="schedule_an_event">Schedule an event</string>
    <string name="enter_the_information_about_the_event_to_schedule">Enter the information about the event to schedule.</string>
    <string name="title">Title</string>
    <string name="description2">Description</string>
    <string name="max_number_of_participants">Max number of participants</string>
    <string name="choose_date">Choose date</string>
    <string name="please_select_a_date">Please select a date</string>
    <string name="choose_time">Choose time</string>
    <string name="please_select_a_time">Please select a time</string>
    <string name="sign_up_for_an_account">Sign up for an account</string>
    <string name="sign_up_for_an_account_by_choosing_a_username_and_password_then_select_the_type_of_account">Sign up for an account by choosing a username and password, then select the type of account.</string>
    <string name="load_complaints">Load Complaints</string>
    <string name="mark_as_viewed">Mark as viewed</string>
    <string name="load_feedback">Load Feedback</string>
    <string name="minor_in_computer_science">Minor in Computer Science</string>
    <string name="major_in_mathematics">Major in Mathematics</string>
    <string name="for_students_in_the_mathematics_admission_category">For students in the Mathematics admission category:</string>
    <string name="a_gpa_of_at_least_2_0_across_the_following_four_courses_csc_mata67_mata22_mata31_mata37">A GPA of at least 2.0 across the following four courses: CSC/MATA67, MATA22, MATA31, MATA37</string>
    <string name="a_grade_of_at_least_b_in_one_of_csc_mata67_mata22_mata37">A grade of at least B in one of CSC/MATA67, MATA22, MATA37</string>
    <string name="major_in_statistics">Major in Statistics</string>
    <string name="for_students_in_the_statistics_admission_category">For students in the Statistics admission category:</string>
    <string name="a_gpa_of_at_least_2_3_across_the_following_four_courses_csca08_a20_mata22_mata30_a31_mata36_a37">A GPA of at least 2.3 across the following four courses: CSCA08/A20, MATA22, MATA30/A31, MATA36/A37.</string>
    <string name="major_specialist_in_computer_science">Major/Specialist in Computer Science</string>
    <string name="for_students_in_the_computer_science_admission_category">For students in the Computer Science admission category:</string>
    <string name="you_will_be_admitted_to_your_choice_of_the_computer_science_major_or_the_software_engineering_and_comprehensive_streams_of_the_computer_science_specialist_if_you_achieve_all_of_the_following_grades">You will be admitted to your choice of the Computer Science Major or the Software Engineering and Comprehensive streams of the Computer Science Specialist if you achieve all of the following grades.</string>
    <string name="a_gpa_of_at_least_2_5_across_the_following_five_courses_csc_mata67_csca48_mata22_mata31_mata37">A GPA of at least 2.5 across the following five courses: CSC/MATA67, CSCA48, MATA22, MATA31, MATA37</string>
    <string name="for_students_in_other_admission_categories">For students in other admission categories:</string>
    <string name="students_will_be_selected_for_admission_to_these_spaces_based_on_their_grades_in_csc_mata67_csca48_mata22_mata37">Students will be selected for admission to these spaces based on their grades in CSC/MATA67, CSCA48, MATA22, MATA37.</string>
    <string name="students_in_the_mathematics_or_statistics_admission_categories_may_apply_for_one_of_these_extra_spaces_upon_completion_of_the_required_courses">Students in the Mathematics or Statistics admission categories may apply for one of these extra spaces upon completion of the required courses.</string>
    <string name="students_in_admission_categories_from_outside_cms_are_eligible_to_apply_for_one_of_these_extra_spaces_upon_completion_of_the_required_courses_if_they_achieve_at_least_an_a_in_both_csc_mata67_and_mata31_the_first_time_that_they_complete_those_courses">Students in admission categories from outside CMS are eligible to apply for one of these extra spaces upon completion of the required courses if they achieve at least an A- in both CSC/MATA67 and MATA31 the first time that they complete those courses.</string>
    <string name="specialist_in_mathematics">Specialist in Mathematics</string>
    <string name="a_gpa_of_at_least_2_5_across_the_following_four_courses_csc_mata67_mata22_mata31_mata37">A GPA of at least 2.5 across the following four courses: CSC/MATA67, MATA22, MATA31, MATA37.</string>
    <string name="a_grade_of_at_least_b_in_two_of_csc_mata67_mat_a22_mata37">A grade of at least B in two of CSC/MATA67, MAT A22, MATA37.</string>
    <string name="specialist_in_statistics">Specialist in Statistics</string>
    <string name="a_gpa_of_at_least_2_5_across_the_following_four_courses_csca08_csc_mata67_mata22_mata31_mata37">A GPA of at least 2.5 across the following four courses: CSCA08, CSC/MATA67, MATA22, MATA31, MATA37.</string>
    <string name="rsvp_event">RSVP Event</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="view_complaint">View Complaints</string>
    <string name="view_feedback">View Feedback</string>
    <string name="load_events">Load Events</string>
    <string name="load_complaints">Load Complaints</string>
    <string name="mark_view">Mark as viewed</string>
    <string name="load_feedback">Load feedback</string>
</resources>
