<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_login">
    <!-- Consists of:
        - ID for fragment
        - Name of class implementing Fragment (class name prepended by package name)
        - Label
        - Layout XML file
   -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cscb07project.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_create_announcement"
        android:name="com.example.cscb07project.ui.createannouncement.CreateAnnouncementFragment"
        android:label="@string/menu_create_announcement"
        tools:layout="@layout/fragment_create_announcement" />
    <fragment
        android:id="@+id/nav_view_complaints"
        android:name="com.example.cscb07project.ui.viewcomplaints.ViewComplaintsFragment"
        android:label="@string/menu_view_complaints"
        tools:layout="@layout/fragment_view_complaints" />
    <fragment
        android:id="@+id/nav_view_feedback"
        android:name="com.example.cscb07project.ui.viewfeedback.ViewFeedbackFragment"
        android:label="@string/menu_view_feedback"
        tools:layout="@layout/fragment_view_feedback" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.cscb07project.ui.account.LoginFragmentView"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_sign_up"
            app:destination="@id/nav_sign_up" />
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_sign_up"
        android:name="com.example.cscb07project.ui.account.SignUpFragment"
        android:label="@string/menu_sign_up"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/action_nav_sign_up_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>
    <fragment
        android:id="@+id/nav_announcements_and_events"
        android:name="com.example.cscb07project.ui.announcementsandevents.AnnouncementsAndEventsFragment"
        android:label="@string/menu_announcements_and_events"
        tools:layout="@layout/fragment_announcements_and_events" >
        <action
            android:id="@+id/action_nav_announcements_and_events_to_nav_view_announcements"
            app:destination="@id/nav_view_announcements" />
        <action
            android:id="@+id/action_nav_announcements_and_events_to_nav_view_events"
            app:destination="@id/nav_view_events" />
    </fragment>
    <fragment
        android:id="@+id/nav_view_announcements"
        android:name="com.example.cscb07project.ui.announcementsandevents.ViewAnnouncementsFragment"
        android:label="@string/menu_view_announcements"
        tools:layout="@layout/fragment_view_announcements" />
    <fragment
        android:id="@+id/nav_view_events"
        android:name="com.example.cscb07project.ui.announcementsandevents.ViewEventsFragment"
        android:label="@string/menu_view_events"
        tools:layout="@layout/fragment_view_events" />
    <fragment
        android:id="@+id/nav_complaint_form"
        android:name="com.example.cscb07project.ui.complaintform.ComplaintFormFragment"
        android:label="Complaint Form"
        tools:layout="@layout/fragment_complaint_form" />
    <fragment
        android:id="@+id/nav_schedule_events"
        android:name="com.example.cscb07project.ui.events.ScheduleEventsFragment"
        android:label="@string/menu_schedule_events"
        tools:layout="@layout/fragment_schedule_events" >
        <action
            android:id="@+id/action_nav_schedule_events_self"
            app:destination="@id/nav_schedule_events" />
    </fragment>
    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.cscb07project.ui.feedback.FeedbackFormFragment"
        android:label="Feedback Form"
        tools:layout="@layout/fragment_feedback_form" />
    <fragment
        android:id="@+id/nav_require"
        android:name="com.example.cscb07project.ui.requirement.RequireFragment"
        android:label="@string/check_post"
        tools:layout="@layout/fragment_require" />
</navigation>